samples/_failures_safe/1761086372_0c1742_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1f56dbd.c: In function ‘main’:
./samples/SAFE/__tmp_f1f56dbd.c:145:32: error: missing terminating ' character
  145 |         input[input_len - 1] = '\0
      |                                ^~~
./samples/SAFE/__tmp_f1f56dbd.c:145:9: error: expected expression at end of input
  145 |         input[input_len - 1] = '\0
      |         ^~~~~
./samples/SAFE/__tmp_f1f56dbd.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1f56dbd.c:145:9: error: expected declaration or statement at end of input
